syntax = "proto3";
package petri.vault.v1beta1;

import "gogoproto/gogo.proto";
import "petri/vault/v1beta1/vault.proto";

option go_package            = "github.com/petrichormoney/petri/x/vault/types";
option (gogoproto.equal_all) = false;
option (gogoproto.goproto_getters_all) = false;

message GenesisState {
  repeated Vault vaults = 1 [
    (gogoproto.customname) = "Vaults",
    (gogoproto.moretags)   = "yaml:\"vaults\"",
    (gogoproto.nullable)   = false
  ];
  repeated StableMintVault stableMintVault = 2 [
    (gogoproto.moretags)   = "yaml:\"stableMintVault\"",
    (gogoproto.nullable)   = false
  ];
  repeated AppExtendedPairVaultMappingData appExtendedPairVaultMapping = 3 [
    (gogoproto.moretags)   = "yaml:\"appExtendedPairVaultMapping\"",
    (gogoproto.nullable)   = false
  ];
  repeated OwnerAppExtendedPairVaultMappingData userVaultAssetMapping = 4 [
    (gogoproto.moretags)   = "yaml:\"userVaultAssetMapping\"",
    (gogoproto.nullable)   = false
  ];
  uint64 lengthOfVaults = 5 [ (gogoproto.moretags) = "yaml:\"lengthOfVaults\""];
}
